Fixed text animation mask clipping

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -90,3 +90,8 @@ section {
   display: block;
   overflow: hidden;
 }
+
+.split-line {
+  margin-bottom: -0.1em;
+  padding-bottom: 0.1em;
+}
